--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <nav class="nav">
         <ul class="non-user-nav" role="list">
             <img class="logo" [src]="path" [alt]="alt">
-            <li><a href="">Home</a></li>
+            <li><a href="">Home 2</a></li>
             <li><a href="">Browse recipes</a></li>
             <li><a href="">Nutrition table</a></li>
             <li><a href="">Register</a></li>
