update on main styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("ResetCSS.scss");
 @import url("//fonts.googleapis.com/css?family=Open+Sans");
-
-html {
-    font-family: "Open Sans", sans-serif;
+@media (prefers-reduced-motion: no-preference) {
+    html {
+        scroll-behavior: smooth;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        min-width: 320px;
+        font-family: "Open Sans", sans-serif;
+    }
 }
 
 body {
