added styling to homePage and Navigation

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,13 +6,27 @@
         <img class="banner" [src]="path" [alt]="alt">
     </div>
 </section>
+<div class="divider"></div>
+<h2 class="list-section-heading">Tasty recipes - below</h2>
 <section>
-    <div>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+    <div class="list-container">
+        <ul class="card-container" role="list">
+            <li class="card">
+                <img [src]="path" [alt]="alt" class="dummie-pic">
+                <span class="bar"></span>
+            </li>
+            <li class="card">
+                <img [src]="path" [alt]="alt" class="dummie-pic">
+                <span class="bar"></span>
+            </li>
+            <li class="card">
+                <img [src]="path" [alt]="alt" class="dummie-pic">
+                <span class="bar"></span>
+            </li>
+            <li class="card">
+                <img [src]="path" [alt]="alt" class="dummie-pic">
+                <span class="bar"></span>
+            </li>
         </ul>
     </div>
 </section>
