--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,11 +1,10 @@
 header {
-    position: relative;
     overflow: hidden;
-    background-image: linear-gradient(to bottom, rgb(0 0 0), #0000000c);
     gap: 10rem;
+    position: sticky;
+    top: 0;
+    background-image: linear-gradient(to bottom, rgb(0 0 0), #0000000c);
     .nav {
-        position: sticky;
-        top: 0;
         width: 100%;
     }
     ul {
@@ -16,6 +15,7 @@ header {
         align-items: center;
         gap: 10rem;
         padding: 20px;
+
         li a {
             font-size: 1.4rem;
             text-decoration: none;
@@ -58,4 +58,34 @@ header {
             -moz-box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
         }
     }
+}
+
+@media all and (max-width: 600px) {
+    header {
+        position: relative;
+        overflow: hidden;
+        background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0470588235));
+
+        ul {
+            display: flex;
+            gap: 2rem;
+            padding: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+
+            .logo {
+                display: none;
+            }
+
+            li a {
+                font-size: 0.8rem;
+            }
+        }
+    }
+}
+
+.main-banner {
+    position: relative;
+    z-index: 0;
 }
