--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,15 @@
 body {
     background-image: url("assets/main-background-min.jpg");
 }
+
+app-navigation {
+    position: relative;
+    z-index: 1000;
+}
+
+@media screen and (max-width: 600px) {
+    app-navigation {
+        position: relative;
+        z-index: 1000;
+    }
+}
