--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -35,7 +35,7 @@
 
 .list-section-heading {
     font-weight: 200;
-    color: coral;
+    color: rgb(0, 81, 128);
     text-shadow: rgb(0 0 0) 1px 0px 0px, rgb(0 0 0) -0.416147px 0.909297px 0px, rgb(1 0 87) 0px 3px 0px,
         rgb(139 139 139) -0.653644px -0.756802px 0px, rgb(255 255 255) 0px 0px 6px, rgb(0 0 0) 0.96017px -0.279415px 0px;
     font-size: 4rem;
@@ -111,6 +111,102 @@ section {
                 background: #ff7f504a;
                 box-shadow: 0px -7px 17px 2px #ff7f5096;
                 width: 100%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .main-banner {
+        position: relative;
+        z-index: 0;
+
+        .heading-container {
+            position: static;
+            top: unset;
+            left: unset;
+            margin: 0.8rem auto;
+            background-color: rgba(146, 160, 164, 0.21);
+            -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+            width: fit-content;
+            padding: 0.5rem;
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.2392156863);
+            text-align: center;
+
+            h1 {
+                font-weight: 200;
+                color: coral;
+                text-shadow: rgb(0 0 0) 1px 0px 0px, rgb(0 0 0) -0.416147px 0.909297px 0px, rgb(1 0 87) 0px 3px 0px,
+                    rgb(139 139 139) -0.653644px -0.756802px 0px, rgb(255 255 255) 0px 0px 6px,
+                    rgb(0 0 0) 0.96017px -0.279415px 0px;
+                font-size: 1rem;
+                line-height: 1;
+                text-align: center;
+                display: inline-block;
+            }
+        }
+    }
+    .divider {
+        max-width: 80%;
+        height: 1px;
+        background-color: coral;
+        margin: 3rem auto;
+        box-shadow: 0px 0px 20px white, 0px 0px 20px white, 0px 0px 20px white, 0px 0px 20px white, 0px 0px 20px white,
+            0px 0px 20px white;
+    }
+
+    .list-section-heading {
+        font-weight: 200;
+        color: rgb(38 69 87);
+        text-shadow: rgb(0 0 0) 1px 0px 0px, rgb(0 0 0 / 60%) -0.416147px 0.909297px 0px, rgb(1 0 87) 0px 3px 0px,
+            rgb(139 139 139) -0.653644px -0.756802px 0px, rgb(0 0 0) 0px 0px 6px, rgb(0 0 0) 0.96017px -0.279415px 0px;
+        font-size: 1.5rem;
+        line-height: 1;
+        text-align: center;
+        background: rgba(255, 255, 255, 0.0901960784);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+        padding: 1rem 0 1rem;
+        margin: auto;
+        border-radius: 10px;
+    }
+
+    section {
+        .list-container {
+            max-width: 80%;
+            margin: 1rem auto;
+            background-color: rgba(0, 0, 0, 0.7411764706);
+            -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+            padding: 1.5rem;
+            border-radius: 10px;
+            border: 1px solid coral;
+
+            .card-container {
+                display: flex;
+                gap: 1rem;
+                flex-wrap: wrap;
+                flex-direction: row;
+                justify-content: space-evenly;
+
+                .card {
+                    position: relative;
+                    box-shadow: 0px 0px 4px 0px white;
+                    border-radius: 10px;
+                    overflow: hidden;
+                    transition: unset;
+
+                    .dummie-pic {
+                        width: 50px;
+                        height: 75px;
+                    }
+
+                    .bar {
+                        display: none;
+                    }
+                }
             }
         }
     }
