--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -60,20 +60,20 @@ header {
     }
 }
 
-@media all and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     header {
-        position: relative;
         overflow: hidden;
+        gap: 1em;
+        position: sticky;
+        top: 0;
         background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0470588235));
-
         ul {
             display: flex;
-            gap: 2rem;
+            gap: 1rem;
             padding: 10px;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-
             .logo {
                 display: none;
             }
@@ -83,9 +83,4 @@ header {
             }
         }
     }
-}
-
-.main-banner {
-    position: relative;
-    z-index: 0;
 }
