added 2 fetch requests, macros component and updated styling of it and homepage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navigation></app-navigation>
 <app-homepage></app-homepage>
-<router-outlet></router-outlet>
+<app-macros></app-macros>
+<app-footer></app-footer>
