--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -6,5 +6,6 @@
         <li><a href="">Nutrition table</a></li>
         <li><a href="">Register</a></li>
         <li><a href="">Login</a></li>
+        <li><a href="">Register</a></li>
     </ul>
 </header>
