--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -72,10 +72,55 @@ section {
                 border-radius: 10px;
                 overflow: hidden;
                 transition: all 300ms ease-in-out;
+                display: flex;
+                width: 70%;
+                flex-wrap: wrap;
+                flex-direction: column;
+                padding: 1.2rem;
+
+                .header-container {
+                    position: absolute;
+                    left: 50%;
+                    top: 1rem;
+
+                    h3 {
+                        color: coral;
+                        font-size: 3.3rem;
+                        text-align: center;
+                    }
+                }
+
+                .buttons-container {
+                    display: flex;
+                    margin: 0.5rem;
+                    gap: 0.5rem;
+                    justify-content: flex-start;
+                    flex-wrap: wrap;
+
+                    .button {
+                        text-shadow: -1px 2px 1px black;
+                        font-size: 1em;
+                        background: transparent;
+                        color: coral;
+                        border: 1px solid #ffffff;
+                        padding: 8px;
+                        margin: 5px;
+                        border-radius: 10px;
+                        font-weight: 650;
+                        text-decoration: none;
+                        letter-spacing: 1px;
+                        transition: all 200ms ease-in-out;
+                    }
+
+                    .button:hover {
+                        box-shadow: 0px 0px 10px white, 0px 0px 10px coral;
+                    }
+                }
 
                 .dummie-pic {
                     width: 250px;
-                    height: 280px;
+                    height: 250px;
+                    border-radius: 10px;
                 }
                 .bar::before,
                 .bar::after {
@@ -94,6 +139,14 @@ section {
 
                 .bar::after {
                     right: 0%;
+                }
+                h3 {
+                    color: coral;
+                    font-size: 1.3rem;
+                }
+                p {
+                    color: white;
+                    margin: 10px;
                 }
             }
 
@@ -116,7 +169,7 @@ section {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 678px) {
     .main-banner {
         position: relative;
         z-index: 0;
@@ -180,7 +233,7 @@ section {
             background-color: rgba(0, 0, 0, 0.7411764706);
             -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
-            padding: 1.5rem;
+            padding: unset;
             border-radius: 10px;
             border: 1px solid coral;
 
@@ -189,7 +242,7 @@ section {
                 gap: 1rem;
                 flex-wrap: wrap;
                 flex-direction: row;
-                justify-content: space-evenly;
+                width: 100%;
 
                 .card {
                     position: relative;
@@ -197,6 +250,7 @@ section {
                     border-radius: 10px;
                     overflow: hidden;
                     transition: unset;
+                    width: 100%;
 
                     .dummie-pic {
                         width: 50px;
@@ -205,6 +259,67 @@ section {
 
                     .bar {
                         display: none;
+                    }
+
+                    .header-container {
+                        position: static;
+                        left: unset;
+                        top: unset;
+                        display: flex;
+                        justify-content: center;
+
+                        h3 {
+                            color: coral;
+                            font-size: 1.3rem;
+                            text-align: unset;
+                        }
+                    }
+
+                    .pic-container {
+                        display: flex;
+                        justify-content: center;
+                        margin: 0.5rem;
+
+                        .dummie-pic {
+                            width: 150px;
+                            height: 150px;
+                        }
+                    }
+
+                    .buttons-container {
+                        display: flex;
+                        margin: 10px auto;
+                        gap: 1rem;
+                        justify-content: center;
+                        flex-wrap: wrap;
+
+                        .button {
+                            text-shadow: -1px 2px 1px black;
+                            font-size: 0.8rem;
+                            background: transparent;
+                            color: coral;
+                            border: 1px solid #ffffff;
+                            padding: 6px;
+                            border-radius: 10px;
+                            font-weight: 650;
+                            text-decoration: none;
+                            letter-spacing: 1px;
+                            transition: all 200ms ease-in-out;
+                        }
+                    }
+
+                    .text-container {
+                        display: flex;
+                        width: 100%;
+                        flex-direction: column;
+                        flex-wrap: wrap;
+
+                        p {
+                            color: white;
+                            margin: 10px;
+                            font-size: 0.7rem;
+                            text-align: left;
+                        }
                     }
                 }
             }
