created routes in routing module, updated app.comp.html and importerd routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-navigation></app-navigation>
-<app-homepage></app-homepage>
-<app-macros></app-macros>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
