--- a/src/app/core/macros/macros.component.scss
+++ b/src/app/core/macros/macros.component.scss
@@ -1,62 +1,66 @@
+.global-container {
+  width: 100%;
+  height: 100vh;
+}
 .table-container {
+  width: 100%;
+  max-width: 80%;
+  margin: auto;
+  border: 1px solid coral;
+  border-radius: 10px;
+
+  table {
+    margin: 10px auto 60px;
+    table-layout: fixed;
+    background-color: rgba(0, 0, 0, 0.3019607843);
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
-    max-width: 80%;
-    margin: auto;
-    border: 1px solid coral;
-    border-radius: 10px;
+    padding: 1.5rem;
+    border-collapse: collapse;
 
-    table {
-        margin: 10px auto 60px;
-        table-layout: fixed;
-        background-color: rgba(0, 0, 0, 0.3019607843);
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        align-items: center;
-        width: 100%;
-        padding: 1.5rem;
-        border-collapse: collapse;
-
-        tr {
-            border: 3px ridge #3e5151;
-        }
-
-        tr:not(.table-header):hover {
-            border: 3px solid #84a8a8;
-        }
-
-        .table-data {
-            width: 30px;
-            white-space: nowrap;
-            color: white;
-            border: 1px ridge #3e5151;
-            overflow: hidden;
-            font-size: 1.4rem;
-        }
-
-        .table-data:hover {
-            border: 3px solid coral;
-        }
-
-        thead {
-            text-align: left;
-            position: relative;
-
-            .table-header {
-                position: sticky;
-                top: 4rem;
-                th {
-                    white-space: nowrap;
-                    color: black;
-                    overflow: hidden;
-                    background-color: white;
-                    border: 3px ridge #3e5151;
-                    text-shadow: 0px 0px 10px coral;
-                    font-size: 1.4rem;
-                }
-                th:not(:last-child) {
-                    margin-right: 2px;
-                }
-            }
-        }
+    tr {
+      border: 3px ridge #3e5151;
     }
+
+    tr:not(.table-header):hover {
+      border: 3px solid #84a8a8;
+    }
+
+    .table-data {
+      width: 30px;
+      white-space: nowrap;
+      color: white;
+      border: 1px ridge #3e5151;
+      overflow: hidden;
+      font-size: 1.4rem;
+    }
+
+    .table-data:hover {
+      border: 3px solid coral;
+    }
+
+    thead {
+      text-align: left;
+      position: relative;
+
+      .table-header {
+        position: sticky;
+        top: 4rem;
+        th {
+          white-space: nowrap;
+          color: black;
+          overflow: hidden;
+          background-color: white;
+          border: 3px ridge #3e5151;
+          text-shadow: 0px 0px 10px coral;
+          font-size: 1.4rem;
+        }
+        th:not(:last-child) {
+          margin-right: 2px;
+        }
+      }
+    }
+  }
 }
