updates on loader comp

--- a/src/app/shared/loader/loader.component.html
+++ b/src/app/shared/loader/loader.component.html
@@ -1,5 +1,6 @@
-<div class="loader-container">
-    <p class="loader">
-        LOADING{{interval}}
-    </p>
+<div class="lds-ring">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
