--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,11 @@
 body {
   background-image: url("assets/main-background-min.jpg");
   backdrop-filter: blur(5px);
-  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100%;
   width: 100%;
 }
 
