--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,9 +1,9 @@
 .footer {
   display: flex;
-  position: sticky;
+  position: fixed;
   padding: 5px;
   bottom: 0;
-  gap: 3rem;
+  gap: 15rem;
   width: 100%;
   text-align: center;
   height: 25px;
@@ -16,8 +16,6 @@
   align-content: center;
   justify-content: center;
   align-items: center;
-  // background: #545454;
-  // border: 1px solid #7a7a5f;
   z-index: 1000;
   background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.0470588235));
 
@@ -90,11 +88,12 @@
     font-weight: bold;
     text-shadow: 0px 0px 20px #ffffff;
     font-size: 14px;
-    background: #545454;
-    border: 1px solid #7a7a5f;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    z-index: 1000;
+    box-shadow: 0px 0px 20px #ffffff;
+    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.0470588235));
 
     p {
       text-shadow: #000000 -3px 2px 10px;
@@ -127,7 +126,7 @@
 
     .non-logged {
       display: flex;
-      gap: unset;
+      gap: 2rem;
       flex-wrap: wrap;
       a {
         font-size: 0.7rem;
