--- a/src/app/recipes/details/details.component.html
+++ b/src/app/recipes/details/details.component.html
@@ -1,15 +1,26 @@
 <div class="user-list-container" *ngIf="recipeDetails">
-  <div>
-    {{recipeDetails.name}}
-    <div class="pic-container">
-      <img src={{recipeDetails.image}} [alt]="alt" class="dummie-pic">
+  <section>
+    <div class="list-container">
+      <ul class="card-container" role="list">
+        <li class="card" routerLink='/recipe/details/{{recipeDetails._id}}'>
+          <div class="header-container">
+            <h3>{{recipeDetails.name}}</h3>
+          </div>
+          <div class="pic-container">
+            <img src={{recipeDetails.image}} [alt]="alt" class="dummie-pic">
+          </div>
+          <div class="text-container">
+            <p>{{recipeDetails.fullRecipe}}</p>
+            <p>{{recipeDetails.ingredients}}</p>
+          </div>
+          <div class="buttons-container">
+            <a class="button" href="#">Edit</a>
+            <a class="button" href="#">Delete</a>
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="text-container">
-      <p>{{recipeDetails.fullRecipe}}</p>
-      <p>{{recipeDetails.ingredients}}</p>
-    </div>
+  </section>
+  <div class="global-conainer">
+    <app-global-loader *ngIf="!recipeDetails"></app-global-loader>
   </div>
-</div>
-<div class="global-conainer">
-  <app-global-loader *ngIf="!recipeDetails"></app-global-loader>
-</div>
