--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -1,10 +1,22 @@
 <header>
-  <ul class="non-user-nav" role="list">
+  <!--NOT AUTH-->
+  <ul *ngIf="!isLoggedIn" class="nav" role="list">
     <img class="logo" [src]="path" [alt]="alt" routerLink="/home">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/recipe/browse">Browse recipes</a></li>
     <li><a routerLink="/recipe/macros">Nutrition table</a></li>
     <li><a routerLink="/auth/register">Register</a></li>
     <li><a routerLink="/auth/login">Login</a></li>
+  </ul>
+
+  <!--AUTH-->
+  <ul *ngIf="isLoggedIn" class="nav" role="list">
+    <img class="logo" [src]="path" [alt]="alt" routerLink="/home">
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/recipe/browse">Browse recipes</a></li>
+    <li><a routerLink="/recipe/macros">Nutrition table</a></li>
+    <li><a routerLink="/recipe/macros">My recipes</a></li>
+    <li><a routerLink="/auth/profile">{{user?.email}}</a></li>
+    <li><a routerLink="/auth/logout">Logout</a></li>
   </ul>
 </header>
