--- a/src/app/recipes/browse/list.component.scss
+++ b/src/app/recipes/browse/list.component.scss
@@ -184,8 +184,11 @@ section {
   }
 
   section {
+    width: 100%;
+    margin-bottom: 3rem;
+
     .list-container {
-      max-width: 80%;
+      max-width: 85%;
       margin: 1rem auto;
       background-color: rgba(0, 0, 0, 0.7411764706);
       -webkit-backdrop-filter: blur(5px);
@@ -200,6 +203,7 @@ section {
         flex-wrap: wrap;
         flex-direction: row;
         width: 100%;
+        padding: 1rem 0;
 
         .card {
           position: relative;
@@ -207,7 +211,8 @@ section {
           border-radius: 10px;
           overflow: hidden;
           transition: unset;
-          width: 100%;
+          padding: 0.3rem;
+          width: 45%;
 
           .dummie-pic {
             width: 50px;
@@ -235,7 +240,7 @@ section {
           .pic-container {
             display: flex;
             justify-content: center;
-            margin: 0.5rem;
+            margin: unset;
 
             .dummie-pic {
               width: 150px;
@@ -246,7 +251,7 @@ section {
           .buttons-container {
             display: flex;
             margin: 10px auto;
-            gap: 1rem;
+            gap: 0.5rem;
             justify-content: center;
             flex-wrap: wrap;
 
@@ -262,6 +267,7 @@ section {
               text-decoration: none;
               letter-spacing: 1px;
               transition: all 200ms ease-in-out;
+              margin: unset;
             }
           }
           .text-container {
