--- a/src/app/core/navigation/navigation.component.scss
+++ b/src/app/core/navigation/navigation.component.scss
@@ -1,86 +1,95 @@
 header {
-    overflow: hidden;
-    gap: 10rem;
-    position: sticky;
-    top: 0;
-    background-image: linear-gradient(to bottom, rgb(0 0 0), #0000000c);
-    .nav {
-        width: 100%;
-    }
-    ul {
-        display: flex;
-        flex-wrap: wrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        gap: 10rem;
-        padding: 20px;
+  overflow: hidden;
+  gap: 10rem;
+  position: sticky;
+  top: 0;
+  background-image: linear-gradient(to bottom, rgb(0 0 0), #0000000c);
 
-        li a {
-            font-size: 1.4rem;
-            text-decoration: none;
-            color: #ffab8c;
-            outline-color: yellow;
-            text-shadow: -3px 2px 1px black, 0px 0px 20px white;
-            transition: all 300ms ease-in-out;
-        }
-        li a:hover {
-            color: white;
-            text-shadow: 0px 0px 20px whitesmoke, 0px 0px 20px coral;
-            transform: translate3d(0px, -3px, 0px);
-            display: block;
-            transition: all 300ms ease-in-out;
-        }
-        li a:not(:hover) {
-            transition: 300ms;
-            transform: translate3d(0px, 0px, 0px);
-            color: coral;
-            transition: all 300ms ease-in-out;
-        }
-        .logo {
-            max-width: 100%;
-            display: block;
-            width: 50px;
-            position: absolute;
-            left: 5%;
-            border-radius: 50%;
-            border: 1px solid coral;
-            box-shadow: 0px 0px 7px 0px rgb(255 255 255);
-            -webkit-box-shadow: 0px 0px 7px 0px rgb(255 255 255);
-            -moz-box-shadow: 0px 0px 7px 0px rgb(255 255 255);
-            transition: 500ms all ease-in-out;
-        }
-        .logo:hover {
-            cursor: pointer;
-            transform: rotate(360deg);
-            box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
-            -webkit-box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
-            -moz-box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
-        }
+  .nav:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: transparent;
+    backdrop-filter: blur(5px);
+    z-index: -1;
+  }
+  .nav {
+    width: 100%;
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 10rem;
+    padding: 20px;
+
+    li a {
+      font-size: 1.4rem;
+      text-decoration: none;
+      color: #ffab8c;
+      outline-color: yellow;
+      text-shadow: -3px 2px 1px black, 0px 0px 20px white;
+      transition: all 300ms ease-in-out;
     }
+    li a:hover {
+      color: white;
+      text-shadow: 0px 0px 20px whitesmoke, 0px 0px 20px coral;
+      transform: translate3d(0px, -3px, 0px);
+      display: block;
+      transition: all 300ms ease-in-out;
+    }
+    li a:not(:hover) {
+      transition: 300ms;
+      transform: translate3d(0px, 0px, 0px);
+      color: coral;
+      transition: all 300ms ease-in-out;
+    }
+    .logo {
+      max-width: 100%;
+      display: block;
+      width: 50px;
+      position: absolute;
+      left: 5%;
+      border-radius: 50%;
+      border: 1px solid coral;
+      box-shadow: 0px 0px 7px 0px rgb(255 255 255);
+      -webkit-box-shadow: 0px 0px 7px 0px rgb(255 255 255);
+      -moz-box-shadow: 0px 0px 7px 0px rgb(255 255 255);
+      transition: 500ms all ease-in-out;
+    }
+    .logo:hover {
+      cursor: pointer;
+      transform: rotate(360deg);
+      box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
+      -webkit-box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
+      -moz-box-shadow: 0px 0px 10px whitesmoke, 0px 0px 10px coral;
+    }
+  }
 }
 
 @media screen and (max-width: 678px) {
-    header {
-        overflow: hidden;
-        gap: 1em;
-        position: sticky;
-        top: 0;
-        background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0470588235));
-        ul {
-            display: flex;
-            gap: 1rem;
-            padding: 10px;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            .logo {
-                display: none;
-            }
+  header {
+    overflow: hidden;
+    gap: 1em;
+    position: sticky;
+    top: 0;
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0470588235));
+    ul {
+      display: flex;
+      gap: 1rem;
+      padding: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      .logo {
+        display: none;
+      }
 
-            li a {
-                font-size: 0.8rem;
-            }
-        }
+      li a {
+        font-size: 0.8rem;
+      }
     }
+  }
 }
