--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<title>Login</title>
+<div>
+  <!-- if error message -->
+  <div class="error-container">
+    <p class="error-message">
+      <!-- error message here -->
+      <button class="btn">
+        OK
+      </button>
+    </p>
+  </div>
+  <h3 class="already-reg">Login</h3>
+  <!-- add submit handler to the form -->
+  <form #loginForm="ngForm" class="login-form" method="POST" (ngSubmit)="handleOnSubmitForm(loginForm.value)">
+    <div class="form-group">
+      <label class="credentials" htmlFor="email">e-mail</label>
+      <input type="text" class="email" name="email" placeholder="e-mail..." required [(ngModel)]="email" />
+    </div>
+    <div class="form-group">
+      <label class="credentials" htmlFor="password">password</label>
+      <input type="password" class="password" name="password" placeholder="password..." required
+        [(ngModel)]="password" />
+    </div>
+    <div class="form-group">
+      <input class="already-reg" type="submit" value="Вход" />
+    </div>
+    {{loginForm.value | json}}
+  </form>
+  <h3 class="already-reg">Not registered yet? <a routerLink="/auth/register">Register here</a></h3>
+</div>
