--- a/src/app/recipes/details/details.component.html
+++ b/src/app/recipes/details/details.component.html
@@ -7,15 +7,32 @@
             <h3>{{recipeDetails.name}}</h3>
           </div>
           <div class="pic-container">
-            <img src={{recipeDetails.image}} [alt]="alt" class="dummie-pic">
+            <a href="{{recipeDetails.image}}" target="_blank" rel="noopener">
+              <img src={{recipeDetails.image}} [alt]="alt" class="dummie-pic">
+            </a>
           </div>
           <div class="text-container">
-            <p>{{recipeDetails.fullRecipe}}</p>
-            <p>{{recipeDetails.ingredients}}</p>
+            <h3>Difficulty:</h3>
+            <p>{{recipeDetails.difficulty}}</p>
+            <h3>Portions:</h3>
+            <p>{{recipeDetails.portions}}</p>
+            <h3>Ingredients:</h3>
+            <p class="ingredients">{{recipeDetails.ingredients}}</p>
+            <h3>Full recipe:</h3>
+            <p class="recipe">{{recipeDetails.fullRecipe}}</p>
           </div>
-          <div class="buttons-container">
+          <div class="buttons-container" *ngIf="isOwner">
+            <a class="button" routerLink="/recipe/browse">Back</a>
             <a class="button" href="#">Edit</a>
             <a class="button" href="#">Delete</a>
+          </div>
+          <div>
+            <h3>Created by:
+              <p>{{recipeDetails.ownerName}}</p>
+            </h3>
+            <h3>Created on:
+              <p>{{date}}</p>
+            </h3>
           </div>
         </li>
       </ul>
