--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,15 +11,33 @@
   </div>
   <h3 class="already-reg">Login</h3>
   <!-- add submit handler to the form -->
-  <form #loginForm="ngForm" class="login-form" method="POST" (ngSubmit)="handleOnSubmitForm(loginForm.value)">
+  <form #loginForm="ngForm" class="login-form" (ngSubmit)="handleOnSubmitForm(loginForm)">
     <div class="form-group">
-      <label class="credentials" htmlFor="email">e-mail</label>
-      <input type="text" class="email" name="email" placeholder="e-mail..." required [(ngModel)]="email" />
+      <label class="credentials" for="email">e-mail</label>
+      <input type="text" class="email" name="email" placeholder="e-mail..." #emailInput="ngModel" required ngModel email
+        [appMinLength]="10" />
+      <ng-container *ngIf="emailInput.touched">
+        <p *ngIf="emailInput.errors?.['required']">E-mail is required</p>
+      </ng-container>
+      <ng-container *ngIf="emailInput.dirty">
+        <p class="error-message" *ngIf="emailInput.errors?.['email']">Invalid e-mail format</p>
+        <p class="error-message" *ngIf="emailInput.errors?.['appMinLength']">Email must be at least
+          {{emailInput.errors?.['appMinLength']}} characters long</p>
+      </ng-container>
     </div>
     <div class="form-group">
-      <label class="credentials" htmlFor="password">password</label>
-      <input type="password" class="password" name="password" placeholder="password..." required
-        [(ngModel)]="password" />
+      <label class="credentials" for="password">password</label>
+      <input type="password" class="password" name="password" placeholder="password..." #passInput="ngModel" required
+        ngModel [appMinLength]="5" />
+      <ng-container *ngIf="passInput.touched">
+        <p class="error-message" *ngIf="passInput.errors?.['required']">Password is required</p>
+      </ng-container>
+      <ng-container *ngIf="passInput.dirty">
+        <p class="error-message" *ngIf="passInput.errors?.['appMinLength']">Password must be at least
+          {{passInput.errors?.['appMinLength']}}
+          characters
+          long</p>
+      </ng-container>
     </div>
     <div class="form-group">
       <input class="already-reg" type="submit" value="Вход" />
