--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -11,26 +11,45 @@
   </div>
   <h3 class="already-reg-title">Register</h3>
   <!-- add submit handler to the form -->
-  <form class="register-form" method="POST" #registerForm="ngForm">
+  <form class="register-form" #registerForm="ngForm" (ngSubmit)="handleOnSubmitForm(registerForm)">
     <div class="form-group">
       <label class="credentials" for="email">e-mail</label>
-      <input type="text" class="email" id="email" name="email" placeholder="e-mail..." required ngModel />
+      <input type="text" class="email" name="email" placeholder="e-mail..." #emailInput="ngModel" required ngModel email
+        [appMinLength]="10" />
+      <ng-container *ngIf="emailInput.touched">
+        <p *ngIf="emailInput.errors?.['required']">E-mail is required</p>
+      </ng-container>
+      <ng-container *ngIf="emailInput.dirty">
+        <p class="error-message" *ngIf="emailInput.errors?.['email']">Invalid e-mail format</p>
+        <p class="error-message" *ngIf="emailInput.errors?.['appMinLength']">Email must be at least
+          {{emailInput.errors?.['appMinLength']}} characters long</p>
+      </ng-container>
     </div>
 
     <div class="form-gorup">
       <label class="credentials" for="password">password</label>
-      <input type="password" class="password" id="password" name="password" placeholder="password..." required
-        ngModel />
+      <input type="password" class="password" name="password" placeholder="password..." #passInput="ngModel" required
+        ngModel [appMinLength]="5" />
+      <ng-container *ngIf="passInput.touched">
+        <p class="error-message" *ngIf="passInput.errors?.['required']">Password is required</p>
+      </ng-container>
+      <ng-container *ngIf="passInput.dirty">
+        <p class="error-message" *ngIf="passInput.errors?.['appMinLength']">Password must be at least
+          {{passInput.errors?.['appMinLength']}}
+          characters
+          long</p>
+      </ng-container>
     </div>
 
     <div class="form-group">
-      <label class="credentials" for="re-password">repeat password</label>
-      <input type="password" class="rePassword" id="re-password" name="re-password" placeholder="repeat password..."
+      <label class="credentials" for="rePassword">repeat password</label>
+      <input type="password" class="rePassword" id="rePassword" name="rePassword" placeholder="repeat password..."
         required ngModel />
     </div>
     <div class="form-group">
-      <input class="already-reg" type="submit" value="Вход" />
+      <input class="already-reg" type="submit" value="Register" />
     </div>
+    {{registerForm.value | json}}
   </form>
   <h3 class="already-reg">Already registered? <a routerLink="/auth/login">Log in here</a></h3>
 </div>
