--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,17 +3,20 @@
   <!-- if error message -->
   <div class="error-container">
     <p class="error-message">
-      <!-- error message here -->
-      <button class="btn">
+      {{authService.hasError}}
+      <button class="btn" (click)="authService.handleClearError()">
         OK
       </button>
     </p>
   </div>
+
   <h3 class="already-reg-title">Register</h3>
   <!-- add submit handler to the form -->
   <form class="register-form" #registerForm="ngForm" (ngSubmit)="handleOnSubmitForm(registerForm)">
     <div class="form-group">
-      <label class="credentials" for="email">e-mail</label>
+      <label class="credentials" for="email">
+        <fa-icon [icon]="faEmail"></fa-icon>
+      </label>
       <input type="text" class="email" name="email" placeholder="e-mail..." #emailInput="ngModel" required ngModel email
         [appMinLength]="10" />
       <ng-container *ngIf="emailInput.touched">
@@ -27,7 +30,9 @@
     </div>
 
     <div class="form-gorup">
-      <label class="credentials" for="password">password</label>
+      <label class="credentials" for="password">
+        <fa-icon [icon]="faPass"></fa-icon>
+      </label>
       <input type="password" class="password" name="password" placeholder="password..." #passInput="ngModel" required
         ngModel [appMinLength]="5" />
       <ng-container *ngIf="passInput.touched">
@@ -42,7 +47,9 @@
     </div>
 
     <div class="form-group">
-      <label class="credentials" for="rePassword">repeat password</label>
+      <label class="credentials" for="rePassword">
+        <fa-icon [icon]="faPass"></fa-icon>
+      </label>
       <input type="password" class="rePassword" id="rePassword" name="rePassword" placeholder="repeat password..."
         required ngModel />
     </div>
