--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <header>
   <!--NOT AUTH-->
-  <ul *ngIf="!isLogged" class="nav" role="list">
+  <ul *ngIf="!authService.isLogged" class="nav" role="list">
     <img class="logo" [src]="path" [alt]="alt" routerLink="/home">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/recipe/browse">Browse recipes</a></li>
@@ -10,7 +10,7 @@
   </ul>
 
   <!--AUTH-->
-  <ul *ngIf="isLogged" class="nav" role="list">
+  <ul *ngIf="authService.isLogged" class="nav" role="list">
     <img class="logo" [src]="path" [alt]="alt" routerLink="/home">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/recipe/browse">Browse recipes</a></li>
@@ -18,7 +18,7 @@
     <li><a routerLink="/recipe/my-recipes">My recipes</a></li>
     <li><a routerLink="/recipe/create">Create</a></li>
     <li><a routerLink="/recipe/my-recipes">Edit</a></li>
-    <li><a routerLink="/auth/profile">{{getUser?.email}}</a></li>
+    <li><a routerLink="/auth/profile">{{authService.user?.email}}</a></li>
     <li><a routerLink="/auth/logout">Logout</a></li>
   </ul>
 </header>
