updated globalLoader import and home route

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -8,7 +8,7 @@
       rel="noreferrer">LinkedIn</a>
   </p>
   <ul class="footer-body" role="list">
-    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/about">About</a></li>
     <ng-container *ngIf="!isLoggedIn">
       <li><a routerLink="/auth/login">Login</a></li>
