--- a/src/app/core/page-not-found/page-not-found.component.html
+++ b/src/app/core/page-not-found/page-not-found.component.html
@@ -3,7 +3,7 @@
   <div>
     <p class="error-message">
       Error. PAGE NOT FOUND, return to
-      <a routerLink="/home">Home</a>
+      <a routerLink="/">Home</a>
     </p>
   </div>
 </div>
