--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <header>
   <!--NOT AUTH-->
   <ul *ngIf="!authService.isLogged" class="nav" role="list">
-    <img class="logo" [src]="path" [alt]="alt" routerLink="/home">
+    <img class="logo" [src]="path" [alt]="alt" routerLink="/">
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/recipe/browse">Browse recipes</a></li>
     <li><a routerLink="/recipe/macros">Nutrition table</a></li>
