--- a/src/app/recipes/browse/list.component.html
+++ b/src/app/recipes/browse/list.component.html
@@ -1,5 +1,21 @@
 <section>
-  <div class="list-container">
+  <div *ngIf="authService.hasError" class="error-container">
+    <p class="error-message">
+      {{authService.hasError}}
+    </p>
+    <div class="buttons-container">
+      <button class="button" (click)="recipeService.handleClearError()">
+        OK
+      </button>
+    </div>
+  </div>
+  <div class="list-container" *ngIf="!authService.hasError">
+    <h3>Here you can find the full list of recipes</h3>
+    <div class="buttons-container">
+      <button class="button" (click)="handleSorting()">Sort by {{sortingType === 'newest' ? 'oldest':
+        'newest'}}</button>
+    </div>
+    <h3>Sorted by {{sortingType}}</h3>
     <ul class="card-container" role="list">
       <li class="card" *ngFor="let recipe of recipeList" routerLink='/recipe/details/{{recipe._id}}'>
         <!-- this can be used instead of the one above[routerLink]="['/recipe','details', recipe._id]"-->
@@ -11,10 +27,14 @@
         </div>
         <div class="buttons-container">
           <!--FOR OWNER OF THE POST-->
-          <a class="button" href="#">Edit</a>
-          <a class="button" href="#">Delete</a>
+          <ng-container *ngIf="authService.isLogged && recipe.owner.toString()===authService.user?.id?.toString()">
+            <a class="button" href="#">Edit</a>
+            <a class="button" href="#">Delete</a>
+          </ng-container>
           <!--FOR LOGGED IN USERS-->
-          <a class="button" href="#">Like</a>
+          <ng-container *ngIf="authService.isLogged && !(recipe.owner.toString()===authService.user?.id?.toString())">
+            <a class="button" href="#">Like</a>
+          </ng-container>
           <!--IF NOT LOGGED - NO BUTTONS-->
         </div>
         <span class="bar"></span>
