added cond render for a button routing to login on specific error

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,9 +6,10 @@
   <div *ngIf="authService.hasError" class="error-container">
     <p class="error-message">
       {{authService.hasError}}
-      <button class="btn" (click)="authService.handleClearError()">
+      <button class="button" (click)="authService.handleClearError()">
         OK
       </button>
+      <a *ngIf="!authService.isLogged" class="button" routerLink="auth/login"> Login here</a>
     </p>
   </div>
   <div class="banner-container">
