--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -9,7 +9,7 @@
       <button class="button" (click)="authService.handleClearError()">
         OK
       </button>
-      <a *ngIf="!authService.isLogged" class="button" routerLink="auth/login"> Login here</a>
+      <a *ngIf="!authService.isLogged" class="button" routerLink="auth/login">Login</a>
     </p>
   </div>
   <div class="banner-container">
